--- a/style-2.css
+++ b/style-2.css
@@ -37,15 +37,9 @@
 }
 
 .maze {
-   
-   width: 1000px;
-   height: 800px; 
 
     border: 10px solid black;
-    position: relative;
-    top: 100px;
-    left: 100px;
-   
+    margin: auto;
     z-index: 1;
 }
 
@@ -64,4 +58,11 @@
     height: 100%;
     background: green;
     
+}
+
+#sizes {
+    margin: auto;
+    padding: 0.25em;
+    font-size: 2em;
+    font-weight: 600;
 }
