--- a/style-2.css
+++ b/style-2.css
@@ -45,20 +45,23 @@
 
 
 .row {
-    height: 20px;
+    height: 50px;
     width: auto;
-    
     
 }
 
 .column {
     box-sizing: border-box;
     float: left;
-    width: 20px;
+    width: 50px;
     height: 100%;
     background: whitesmoke;
+   
+    border-right: 1px solid blue;
     
+    border-bottom: 1px solid green;
 }
+
 
 #sizes {
     margin: auto;
